Revision history for Catmandu-ArXiv

{{$NEXT}}

0.200  2018-03-15 10:07:04 CET
    - don't die on empty result list

0.101  2017-03-10 16:51:05 CET
    - cpanfile

0.100  2017-03-02 13:01:13 CET
    - better ORCID support

0.031  2017-02-14 14:42:25 CET
    - clean solution for ORCID

0.030  2017-02-08 15:22:58 CET
    - fetch data via ORCID ID

0.023  2016-04-15 12:37:58 CEST
    - set timeout
    - badge (travis, coveralls)

0.022  2015-02-20 07:36:07 CET
    - make tests happy
    - maintainer added

0.021  2014-08-28 09:38:08 CEST
    - use Catmandu::XML
	- switch to Dist::Milla as build tool
	- tests modified

0.02 	2013-09-10
	- travis, coveralls, kwalitee
	- Build.PL updated to newer versions


0.01    2012-08-02
	- initial release