@@ -2,6 +2,7 @@ use strict;
 use warnings FATAL => 'all';
 use Test::More;
 use Test::Exception;
+use Data::Dumper;
 
 my $pkg;
 
