@@ -1,6 +1,7 @@
 Revision history for Catmandu-ArXiv
 
 {{$NEXT}}
+    - introduce base_api and base_frontend parameters; don't use base anymore
 
 0.200  2018-03-15 10:07:04 CET
     - don't die on empty result list
